fixed alignment issue in nav

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,6 @@
  *, *:before, *:after {
    box-sizing: border-box;
  }
-@import url("stackicons.css");
 /*@import url("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css");*/
 
 body{
@@ -124,7 +123,7 @@ a:hover {
 .nav-ul li a {
   color: #272B37;
   text-decoration: none;
-  padding: 0 20px;
+
   border-right: solid 1px #272B37;
 }
 
@@ -150,6 +149,8 @@ a:hover {
 
 .sidenav li {
    border-bottom: 1px solid #243a47;
+   padding-left: 12px;
+   margin-top: 30px;
  }
 
 .sidenav li a {
@@ -172,7 +173,7 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  font-size: 1.4em;
+  font-size: 1.6em;
  }
 
 .sidenav li a:hover {
